@@ -1297,7 +1297,7 @@ loop extension) for.</font></td>
 
 <td><font size=-1>const string &amp;texture_</font></td>
 
-<td><font size=-1>Image to use as background texture.</font></td>
+<td><font size=-1>Image file name to use as background texture.</font></td>
 </tr>
 
 <tr NOSAVE>
